updade new features and improve UI

--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -265,6 +265,25 @@
 
 	<!-- ///////////////////////////////////////////////////////////////////////////////////////////// -->
 	
+	<!-- FilePond library -->
+	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-image-crop.js?_={{cacheBustingKey}}"></script>
+	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-image-resize.js?_={{cacheBustingKey}}"></script>
+	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-image-preview.js?_={{cacheBustingKey}}"></script>
+	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-file-validate-size.js?_={{cacheBustingKey}}"></script>
+	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-image-exif-orientation.js?_={{cacheBustingKey}}"></script>
+	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-file-validate-type.js?_={{cacheBustingKey}}"></script>
+	<script src="https://{{baseStaticUrl}}/js/filepond/filepond.js?_={{cacheBustingKey}}"></script>
+	<script src="https://{{baseStaticUrl}}/js/filepond/config-filepond.js?_={{cacheBustingKey}}"></script>
+	
+	<!-- videojs player -->
+	<script src="https://{{baseStaticUrl}}/mediaplayer/mediaplayer.one.min.js"></script>
+	
+	<!-- mermaid-js: create diagrams and visualizations using text and code -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/9.1.7/mermaid.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	
+	<!-- MarkDown parser: create document and rich-text format -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.1.1/marked.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	
 	<!-- LEO Admin Core -->
 	<script src="//{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leo.admin.common.js?admin=1&_={{cacheBustingKey}}"></script>
 	<script src="//{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.router.js?admin=1&_={{cacheBustingKey}}"></script>
@@ -314,25 +333,6 @@
 		    });
 		});
 	</script>
-	
-	<!-- FilePond library -->
-	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-image-crop.js?_={{cacheBustingKey}}"></script>
-	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-image-resize.js?_={{cacheBustingKey}}"></script>
-	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-image-preview.js?_={{cacheBustingKey}}"></script>
-	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-file-validate-size.js?_={{cacheBustingKey}}"></script>
-	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-image-exif-orientation.js?_={{cacheBustingKey}}"></script>
-	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-file-validate-type.js?_={{cacheBustingKey}}"></script>
-	<script src="https://{{baseStaticUrl}}/js/filepond/filepond.js?_={{cacheBustingKey}}"></script>
-	<script src="https://{{baseStaticUrl}}/js/filepond/config-filepond.js?_={{cacheBustingKey}}"></script>
-	
-	<!-- videojs player -->
-	<script src="https://{{baseStaticUrl}}/mediaplayer/mediaplayer.one.min.js"></script>
-	
-	<!-- mermaid-js: create diagrams and visualizations using text and code -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/9.1.3/mermaid.min.js"></script>
-	
-	<!-- MarkDown parser: create document and rich-text format -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.0.18/marked.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 </body>
 
