fix bugs and improve system

--- a/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
@@ -50,7 +50,7 @@
 			</div>
 			
         	<div class="row float-right">
-        		<div class='col-md-4 col-xs-12' style="border-right:1px solid #000;height: 60px;" >
+        		<div class='col-md-4 col-xs-12' style="border-right:1px solid #000;height: 60px;font-weight: bold;" >
         			<label for="journeyMapList">Data Journey Map</label>
         			<div>
         				<select id="journeyMapList" data-placeholder="Choose an Journey Map" class="select" > </select>
