--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
@@ -1,4 +1,9 @@
 <!-- customer data profile list  -->
+<style>
+#profile_list_table_info {
+	font-weight: bold;
+}
+</style>
 
 <div class="row">
     <div class="col-lg-5">
@@ -11,10 +16,10 @@
     	<button type="button" class="btn btn-info data-control-update" onclick="mergeDuplicatesHandler()" title="Merge duplicated profiles into a single profile" > 
     		<i class="fa fa-compress" aria-hidden="true"></i> Deduplicate
     	</button>
-    	<button type="button" class="btn btn-primary data-control-update" onclick="importProfileHandler()" title="Import Profile from uploaded CSV file" > 
+    	<button type="button" class="btn btn-primary data-control-update" onclick="importProfileHandler()" title="Import Profile from uploaded CSV file" style="background-color: #5287F7!important;"> 
     		<i class="fa fa-cloud-upload" aria-hidden="true"></i> Import Profile
     	</button>
-    	<button type="button" class="btn btn-primary data-control-update" onclick="importEventHandler()" title="Import Event from uploaded CSV file" > 
+    	<button type="button" class="btn data-control-update" onclick="importEventHandler()" title="Import Event from uploaded CSV file" style="background-color: #FBF95A; color: black; border:solid 1px black;"> 
     		<i class="fa fa-cloud-upload" aria-hidden="true"></i> Import Event
     	</button>
     	<button type="button" class="btn btn-goto-router data-control-insert" onclick="newProfileHandler()" title="Open editor to input new profile"> 
@@ -39,12 +44,12 @@
 	      	<div class="col-md-12 row">
 				
 				<div class="col-md-6" style="background-color:#f5f5f5; border-radius: 5px;padding-top: 5px"> 
-					<div id="filterByJourneyMap" class="col-md-12" style="padding-bottom: 10px" >
+					<div id="filterByJourneyMap" class="col-md-12" style="padding-bottom: 10px; font-weight: bold;" >
       					<select id="journeyMapList" class="form-control" data-placeholder="Choose an Journey Map" class="select" > </select>
 			  		</div>
 					<div class="col-md-12">
 						<label title="Filter all profiles that have mobile phone or email" > 
-								<input id="filterOnlyContactable" type="checkbox" onchange="filterOnlyContactableProfiles(this)" > Filter contact profiles  
+								<input id="filterOnlyContactable" type="checkbox" onchange="filterOnlyContactableProfiles(this)" > Just show contact  
 						</label>
 					</div> 
 					<div class="col-md-12">
@@ -80,8 +85,9 @@
 				<div class="col-md-6" > 
 					<div class="col-md-6" >
 						<div class="dropdown">
-						    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select Advanced Filter
-						    <span class="caret"></span></button>
+						    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+						    	<i class="fa fa-filter" aria-hidden="true"></i> Filter by using advanced criteria <span class="caret"></span>
+						   </button>
 						    <ul class="dropdown-menu">
 						    	<li><a href="javascript:" onclick="handleProfileListFiltersBy(this,'#filterByProfileId')" >Profile ID</a></li>
 						    	<li><a href="javascript:" onclick="handleProfileListFiltersBy(this,'#filterEmail')" > Email Address</a></li>
