--- a/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
@@ -36,7 +36,7 @@
 			<div class="col-lg-4" >
 	            <div class="panel panel-info">
             		<div class="panel-heading"> <h3 class="panel-title text-center"> <i class="fa fa-list" aria-hidden="true"></i> All Data Journey Maps</h3> </div>
-				  	<div class="panel-body" style="height: 80px; padding-top: 20px;" >
+				  	<div class="panel-body" style="height: 80px; padding-top: 20px; font-weight: bold;" >
 				  		<select id="journeyMapList" data-placeholder="Choose an Journey Map" class="select" >
 		                  <!-- journeyMapList -->  
 		                </select>
