fix bugs for importing tracking event

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-event-import.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-event-import.html
@@ -24,12 +24,6 @@
 		 	 	<p style="font-weight: bold;"> 
 		 	 		The uploaded file should be in CSV data format with commas separating different entries.  <br>
 	         	</p>
-	         	<p style="font-weight: bold;font-size: 120%;"> 
-	         		CSV header: 
-	         	</p>
-	         	<div class="datatable_text">
-	         		LEO Profile ID,External CRM ID,Profile Primary Email,Profile Primary Phone,Observer ID,Journey ID,Journey Stage,Event Time,Event Name,Event Value,Time spent in seconds,Transaction ID,Transaction Value,Transaction Currency,Location Name,Location Code,Source Touchpoint URL,Referral Touchpoint URL,Device ID,Device Type,Device Name,Device OS,Browser Name,Referral Campaign ID,Referral Content ID,Referral Message ID,Referral Item ID,Referral Item Name,Image Urls,Video Urls,Custom Event Data <br>
-	         	</div>
 	         	<p style="font-weight:bold;margin-top: 10px;font-size: 120%;"> 
 	         		For the CSV sample data, you can download at this <a target="blank" href="https://docs.google.com/spreadsheets/d/16i4_FCI5OXf0AepMyC1d7wLlWFdzjsgsKt_YLGKJZIc/view"> sample data here </a> 
 	         	</p>
@@ -113,7 +107,7 @@
    		     	{ name: "primaryPhone", title : "Primary Phone", type: "text", align: "center" },
    		     	{ name: "observerId", title : "Observer Id", type: "text",  align: "center" },
    		     	{ name: "journeyMapId", title : "Journey Map Id", type: "text",  align: "center" },
-   		     	{ name: "journeyStage", title : "Journey Stage", type: "number",  align: "center"},
+   		     	{ name: "fraudScore", title : "Fraud Score", type: "number",  align: "center"},
    		     	{ name: "eventTime", title : "Event Time", type: "text", align: "center"},
    		     	{ name: "eventName", title : "Event Name", type: "text", align: "center"},
    		     	{ name: "eventValue", title : "Event Value", type: "text", align: "center"},
