improve system and fix bugs

--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -207,10 +207,13 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	
 	<!-- Cytoscape.js for Graph Visualization -->
-	<script src="https://cdn.jsdelivr.net/npm/cytoscape@3.22.0/dist/cytoscape.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdn.jsdelivr.net/npm/cytoscape@3.23.0/dist/cytoscape.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdn.jsdelivr.net/npm/layout-base@2.0.1/layout-base.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdn.jsdelivr.net/npm/avsdf-base@1.0.0/avsdf-base.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdn.jsdelivr.net/npm/dagre@0.8.5/dist/dagre.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdn.jsdelivr.net/npm/cytoscape-dagre@2.5.0/cytoscape-dagre.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdn.jsdelivr.net/npm/cytoscape-avsdf@1.0.0/cytoscape-avsdf.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdn.jsdelivr.net/npm/cytoscape-node-html-label@1.2.2/dist/cytoscape-node-html-label.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 	<!-- cytoscape-panzoom -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cytoscape-panzoom/2.5.3/cytoscape.js-panzoom.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -323,8 +326,8 @@
 		        '/view/common-widgets/confirm-delete-data-modal.html',
 		        '/view/common-widgets/leo-recommender.html',
 		        		
+		        '/view/templates/tpl-analytics-dashboard.html',
 		        '/view/templates/tpl-customer-profile-info.html',
-		        '/view/templates/tpl-cx-analytics-dashboard.html',
 		        '/view/templates/tpl-customer-journey-flow.html'
 		    ];
 			uriList.forEach(function (uri) {
