--- a/resources/app-templates/leocdp-admin/modules/customer/segment-builder.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-builder.html
@@ -231,18 +231,19 @@
 		<!--  2 query  -->
 		<div class="panel panel-leoadmin">
 			<div class="panel-heading"> <b> <i class="fa fa-filter" aria-hidden="true"></i> Data Query Rules </b> </div>
-			<div class="panel-body">
+			<div class="panel-body row">
 				
 				<!-- Query Details -->
 				<div class="col-lg-9">
 					<div id="segment-builder-holder"></div>
 				</div>
+				<!-- Query Summary -->
 				<div class="col-lg-3 text-center">
 					<div class="btn-group" style="margin-bottom: 20px;" >
 						<button type="button" class="btn btn-goto-router" id="btn-run-querybuilder"> 
-							<i class="fa fa-check-circle-o" aria-hidden="true"></i> Run Query </button>
+							<i class="fa fa-check-circle-o" aria-hidden="true"></i> Query </button>
 						<button type="button" class="btn btn-danger" id="btn-reset-querybuilder"> 
-							<i class="fa fa-trash" aria-hidden="true"></i> Delete Query </button>
+							<i class="fa fa-trash" aria-hidden="true"></i> Reset </button>
 					</div>
 					<div id="segment_size_chart" style="max-width: 300px; margin: auto;"></div>
 				</div>
@@ -266,7 +267,7 @@
 					            <th class="text-center">Data Quality</th>
 					            <th class="text-center">Lead Score</th>
 					            <th class="text-center">CLV Score</th>					            
-					            <th class="text-center">Last Updated at</th>					            
+					            <th class="text-center">Last Updated</th>					            
 				        	</tr>
 				    	</thead>
 				 	</table>
