--- a/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
@@ -56,10 +56,10 @@
 		  	<div class="panel-body" >
 		  		<ul class="nav nav-tabs" data-tab-content="journey_flow_tabs" > 
 			   		<li class="active" >
-		        		<a href="javascript:" data-target-tab="panel_journey_flow_design" > <i class="fa fa-pencil-square" aria-hidden="true"></i> Flow Design View </a>
+		        		<a href="javascript:" data-target-tab="panel_journey_flow_design" > <i class="fa fa-pencil-square" aria-hidden="true"></i> Journey Design </a>
 		       		</li>
-		       		<li >
-		       			<a href="javascript:loadJourneyFlowReport()" data-target-tab="panel_journey_flow_report"  > <i class="fa fa-snowflake-o" aria-hidden="true"></i> Graph Report View </a>
+		       		<li>
+		       			<a href="javascript:loadJourneyFlowReport()" data-target-tab="panel_journey_flow_report"  > <i class="fa fa-snowflake-o" aria-hidden="true"></i> Journey Report </a>
 		       		</li>
 				</ul>
 				<div class="tab-content" id="journey_flow_tabs" style="min-height: 550px;" >
