update system for new features

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
@@ -305,7 +305,7 @@
        });
 	}
 	
-    function initCustomerProfileList(encodedKeywords) {
+    function initCustomerProfileList(encodedKeywords, profileType) {
     	// Date Range Filtering Controller
     	initDateFilterComponent(false, null, null, 180);
     	$("#profile_filter_inputs > input.form-control").on('keyup', function (e) {
