update demo tracking

--- a/example-data-tracking/tracking-events-ecommerce.html
+++ b/example-data-tracking/tracking-events-ecommerce.html
@@ -93,7 +93,7 @@
         var leoCdpTrackedProducts = leoCdpTrackedProducts || [];
         leoCdpTrackedProducts.push({
             name: "Customer Data Platforms",
-            productId: "978-1119790112",
+            itemtId: "978-1119790112",
             idType: "ISBN-13",
             originalPrice: 25,
             salePrice: 25,
