--- a/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
@@ -84,7 +84,7 @@
         		<a href="javascript:" data-target-tab="panel_touchpoint_hubs" > <i class="fa fa-list" aria-hidden="true"></i> Touchpoint Data Hub </a>
        		</li>
        		<li id="tab_journey_data_observers" style="display: none">
-       			<a href="javascript:" data-target-tab="panel_data_observers"  > <i class="fa fa-list" aria-hidden="true"></i> Event Source Observer </a>
+       			<a href="javascript:" data-target-tab="panel_data_observers"  > <i class="fa fa-list" aria-hidden="true"></i> Event Observer </a>
        		</li>
        		<li id="tab_journey_data_authorization" style="display: none">
        			<a href="javascript:" data-target-tab="panel_journey_data_authorization"  > <i class="fa fa-lock" aria-hidden="true"></i> User Authorization </a>
@@ -109,7 +109,7 @@
 			<!-- tab 2 Touchpoint Data Observer  -->
 			<div class="tab-pane" id="panel_data_observers" >
 				<div class="top_page_header" >
-					<h4> All Event Source Observers  </h4>
+					<h4> All Event Observers  </h4>
 				</div>
 		        <div class="table-responsive" >
 		            <div id="data_observers_table" style="height: 700px"></div>
@@ -119,7 +119,7 @@
 			<!-- tab 3 User Authorization  -->
 			<div class="tab-pane" id="panel_journey_data_authorization" >
 				<div class="top_page_header" >
-					<h4> User Authorization of <span id="authorizedJourneyName"></span> </h4>
+					<h4> User Authorization of journey map "<span id="authorizedJourneyName"></span>" </h4>
 				</div>
 		        <div class="col-lg-12">
 		            <div class="form-group row"  >
@@ -228,7 +228,7 @@
 		showJourneyFlowReport( {"journeyMapId": currentJourneyMapId}, containerId )
 	}
 	
-	
+	// DEMO to load report as a graph
 	function loadJourneyFlowReportDemo(){
 		const MAX_ZOOM = 5;
 		const MIN_ZOOM = 0.5;
