improve UI, backend to search profile better

--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -250,6 +250,10 @@
 	
 	<!-- Chroma.js for all kinds of color conversions and color scales  -->
 	<script src="https://cdn.jsdelivr.net/npm/chroma-js@2.4.2/chroma.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	
+	<!-- https://markjs.io/  -->
+	<script src="https://cdn.jsdelivr.net/npm/mark.js@8.11.1/dist/jquery.mark.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	
 </head>
 
 <body>
