--- a/resources/app-templates/leocdp-admin/modules/system/system-info-configs.html
+++ b/resources/app-templates/leocdp-admin/modules/system/system-info-configs.html
@@ -45,7 +45,7 @@
 		         		<h4> <i class="fa fa-database" aria-hidden="true"></i> 
 		         			<mark> There are <span id="profileAttributeCount"></span> attributes in the Profile Model to compute the total of data quality score </mark> </h4>
 		         	</div>
-		         	<div class="col-lg-3" >
+		         	<div class="col-lg-3 text-right" >
 			         	<button type="button" class="btn btn-goto-router" onclick="callDataQualityComputeJob()" title="Recompute and update data quality score for all profiles"  > 
 				     		<i class="fa fa-pencil-square-o" aria-hidden="true"></i> Run Data Quality Compute Job
 				     	</button>
